--- a/todo.backend/playground/playground.csproj
+++ b/todo.backend/playground/playground.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\todo.core\todo.core.csproj" />
+  </ItemGroup>
+
 </Project>
