--- a/todo.backend/WebApi/appsettings.json
+++ b/todo.backend/WebApi/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "ConnectionStrings": {
+    "TodoDbConnectionString": "Data Source=SzLRichard\\SQLEXPRESS;Initial Catalog=TodoDB;Integrated Security=True;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
 }
